# gpsea

./: .flake8  .gitignore  FBN1_TMP.ipynb  HOW_TO_RELEASE.md  MANIFEST.in  README.md  RunGPC.py  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: notebooks.yml  pages.yml  python_ci.yml
.gpsea_ci_cachedir/protein_cache/: NP_852259.1.json  NP_852259.1.pickle
.gpsea_ci_cachedir/tx_cache/: NM_181486.4.json
.gpsea_ci_cachedir/variant_cache/: 12_114355723_114355723_G_A.json  12_114355723_114355723_G_A.pickle  12_114355755_114355756_TG_T.json  12_114355755_114355756_TG_T.pickle  12_114355784_114355785_CA_C.json  12_114355784_114355785_CA_C.pickle  12_114356064_114356065_TA_T.json.json  12_114356064_114356065_TA_T.pickle  12_114366207_114366208_GC_G.json  12_114366207_114366208_GC_G.pickle  12_114366241_114366242_CT_C.json.json  12_114366241_114366242_CT_C.pickle  12_114366267_114366267_C_A.json  12_114366267_114366267_C_A.pickle  12_114366274_114366274_G_T.json  12_114366274_114366274_G_T.json.json  12_114366274_114366274_G_T.pickle  12_114366312_114366312_G_A.json  12_114366312_114366312_G_A.pickle  12_114366348_114366349_CT_C.json  12_114366348_114366349_CT_C.pickle  12_114366360_114366360_C_T.json  12_114366360_114366360_C_T.json.json  12_114366360_114366360_C_T.pickle  12_114366366_114366366_T_A.json  12_114366366_114366366_T_A.json.json  12_114366366_114366366_T_A.pickle  12_114385474_114385474_A_G.json  12_114385474_114385474_A_G.json.json  12_114385474_114385474_A_G.pickle  12_114385475_114385475_C_T.json  12_114385475_114385475_C_T.json.json  12_114385475_114385475_C_T.pickle  12_114385521_114385521_C_G.json  12_114385521_114385521_C_G.json.json  12_114385521_114385521_C_G.pickle  12_114385521_114385521_C_T.json  12_114385521_114385521_C_T.json.json  12_114385521_114385521_C_T.pickle  12_114385522_114385522_G_A.json  (+117 more)
case_studies/CLDN16/: CLDN16_genotype_phenotype_corr.ipynb
case_studies/KMT2D/: KMT2D_correlations.ipynb
case_studies/LMNA/: LMNA.ipynb
dev/: README.md  RERE.ipynb  Statistical tests.ipynb  Visualizers.ipynb  test_draw_variants.ipynb
docs/: Makefile  conf.py  index.rst  installation.rst  setup.rst  tutorial.rst
docs/cohort-data/: CYP21A2.0.1.20.json  RERE.0.1.19.json  RERE.0.1.20.json  TBX5.0.1.19.json  TBX5.0.1.20.json  UMOD.0.1.20.json
docs/data/: README.md
docs/report/: tbx5_all_variants.html  tbx5_cohort_info.html  tbx5_frameshift_vs_missense.csv  tbx5_frameshift_vs_missense.mtc_report.html  tbx5_mtc_report.html  tbx5_truncating_vs_missense.csv  tbx5_truncating_vs_missense.mtc_report.html
docs/user-guide/: autosomal_recessive.rst  custom-components.rst  devries.rst  exploratory.rst  general_hpo_terms.rst  glossary.rst  index.rst  input-data.rst  mtc.rst  predicates.rst  stats.rst
gpc/: __init__.py  all_patients_class.py  compare.py  compare_func.py  disease_class.py  genotype_class.py  patient_class.py  phenotype_class.py  proteins_class.py  variant_class.py
latest/: autosomal_recessive.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  tutorial.html
latest/_modules/: index.html
latest/_sources/: index.rst.txt  installation.rst.txt  tutorial.rst.txt
latest/_static/: documentation_options.js  genophenocorr.css
latest/apidocs/: genophenocorr.analysis.html  genophenocorr.analysis.predicate.genotype.html  genophenocorr.analysis.predicate.html  genophenocorr.analysis.predicate.phenotype.html  genophenocorr.analysis.test_fisherExact.html  genophenocorr.constants.html  genophenocorr.constants.variant_effects.html  genophenocorr.data.html  genophenocorr.html  genophenocorr.io.html  genophenocorr.model.genome.html  genophenocorr.model.html  genophenocorr.preprocessing.html  genophenocorr.preprocessing.test_variant.html  genophenocorr.view.html  gpsea.analysis.clf.html  gpsea.analysis.html  gpsea.analysis.mtc_filter.html  gpsea.analysis.pcats.html  gpsea.analysis.pcats.stats.html  gpsea.analysis.predicate.genotype.html  gpsea.analysis.predicate.html  gpsea.analysis.predicate.phenotype.html  gpsea.analysis.pscore.html  gpsea.analysis.pscore.stats.html  gpsea.analysis.temporal.endpoint.html  gpsea.analysis.temporal.html  gpsea.analysis.temporal.stats.html  gpsea.config.html  gpsea.data.html  gpsea.html  gpsea.io.html  gpsea.model.genome.html  gpsea.model.html  gpsea.preprocessing.html  gpsea.util.html  gpsea.view.html  modules.html
latest/user-guide/: autosomal_recessive.html  custom-components.html  devries.html  exploratory.html  general_hpo_terms.html  glossary.html  index.html  input-data.html  mtc.html  phenotype_predicates.html  predicates.html  stats.html
notebooks/: Hypothes Testing.ipynb  RevisedModelsTesting.ipynb  TestRunPlatzerData.ipynb  Testing Documentation.ipynb  Untitled.ipynb  UserInterface.ipynb  VarCode.ipynb  Variant Comparing Examples.ipynb  Visualizers.ipynb  hpo-toolkit Testing.ipynb  phenopacketImport.ipynb  sandbox.ipynb  visualize.ipynb
notebooks/ANKRD11/: KBG.ipynb  cohort.ipynb
notebooks/FBN1/: FBN1_gpc.ipynb
notebooks/GRIN2B/: PMID_1-s2.0-S1079979697901170_1-s2.0-S1079979697901170.json
notebooks/KBG/: KBG.ipynb  (+5 more)
phenopackets/: AVED.json  bethleham-myopathy.json  retinoblastoma2.json  statin-myopathy.json
src/gpsea/: config.py  (+3 more)
stable/: autosomal_recessive.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  tutorial.html
tests/: __init__.py  _protein_test_service.py  compare_test.py  conftest.py  fixtures.py  genome_data.py  main_test.py  patient_test.py  patient_tests.py  protein_test_service.py  test_analysis.py  test_config.py  test_fisherExact.py  test_fixtures.py  test_generate_doc_cohorts.py  test_io.py  test_predicates.py  test_preprocessing.py  test_tutorial.py  test_util.py  test_view.py  test_vv_preprocessing.py  variant_annotate_test.py
(+2459 files in other folders)
